# webserver

./: CMakeLists.txt  Makefile  controller.cpp  controller.h  main.cpp  myserver  processor.cpp  processor.h  processor_pool.cpp  processor_pool.h  report.pages  request.cpp  request.h  request_acceptor.cpp  request_acceptor.h  request_queue.cpp  request_queue.h  response.cpp  response.h  server_socket.cpp  server_socket.h  webserver.cpp  webserver.h
web_root/: index.css  index.html  index.js
